--- a/bc-js-refresh/review-astronauts-example-COMPLETE/index.html
+++ b/bc-js-refresh/review-astronauts-example-COMPLETE/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8"/>
     <title>Review - Astronauts</title>
 
-    <script type="module" src="js/index.js"></script>
+    <script type="module" src="js/index.js" defer></script>
   </head>
   <body>
     <div class="container">
