--- a/bc-vanilla-javascript-review/bb-review-astronauts-example-BEGIN/index.html
+++ b/bc-vanilla-javascript-review/bb-review-astronauts-example-BEGIN/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Review - Astronauts</title>
 
     <script type="module" src="js/index.js"></script>
